tidy up directories and files

--- a/pintu-app/Jenkinsfile
+++ b/pintu-app/Jenkinsfile
@@ -3,6 +3,7 @@
 pipeline {
   agent { label 'master' }
   environment {
+    dockerImage = ""
     tag_ver = sh (
       script: "date +%s",
       returnStdout: true
@@ -11,33 +12,32 @@ pipeline {
   stages {
     stage('Checkout Source') {
       steps {
-        git 'https://github.com/YOURUSERNAME/jenkins-kubernetes-deployment.git'
+        git 'https://github.com/evanyasn/pintu-k8s'
       }
     }
     stage('Build image') {
       steps{
         script {
-          dockerImage = docker.build 
+          dockerImage = docker.build "makinglaugh/pintu"
         }
       }
     }
     stage('Pushing Image') {
       environment {
-          registryCredential = 'dockerhub-credentials'
+          registryCredential = 'dockerhub-credential'
            }
       steps{
         script {
           docker.withRegistry( 'https://registry.hub.docker.com', registryCredential ) {
-            dockerImage.push("latest")
+            dockerImage.push("${tag_ver}")
           }
         }
       }
     }
-    stage('Deploying React.js container to Kubernetes') {
+    stage('Deploying Pintu-app to k8s') {
       steps {
         script {
-          kubernetesDeploy(configs: "deployment.yaml", 
-                                         "service.yaml")
+          kubernetesDeploy(configs: "./node-app/k8s.yaml")
         }
       }
     }
