--- a/pintu-app/Jenkinsfile
+++ b/pintu-app/Jenkinsfile
@@ -1,7 +1,7 @@
 #!/usr/bin/env groovy
   
 pipeline {
-//  agent { label 'master' }
+  agent any
   environment {
     dockerImage = ""
     tag_ver = sh (
