fix chars replacements

--- a/pintu-app/Jenkinsfile
+++ b/pintu-app/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
     }
     stage('Deploying Pintu-app to k8s') {
       steps {
-        sh "sed \'s/makinglaugh/pintu:latest/makinglaugh/pintu:${tag_ver}/\' k8s.yaml"
+        sh "sed -i \'s/latest/${tag_ver}/\' ./pintu-app/k8s.yaml"
 
         script {
           kubernetesDeploy(configs: "./node-app/k8s.yaml")
