--- a/pintu-app/k8s.yaml
+++ b/pintu-app/k8s.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pintu-app 
+  name: pintu-app
+  namespace: workflows
   labels:
     app: app
 spec:
@@ -24,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pintu-app
-  namespace: workflow
+  namespace: workflows
 spec:
   selector:
     app: app
