--- a/pintu-app/k8s.yaml
+++ b/pintu-app/k8s.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pintu-app
-  namespace: workflows
+  namespace: workloads
   labels:
     app: app
 spec:
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pintu-app
-  namespace: workflows
+  namespace: workloads
 spec:
   selector:
     app: app
